tests/error/array_depth_match.gw
// [contains] array depths do not match
[1,2,3,4] @=> int k[1][1];
